# sqlquality

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/sqlquality/: __init__.py  antipatterns.py  changeset.py  checkcmd.py  cli.py  complexity.py  config.py  dbtproject.py  delta.py  dialects.py  gate.py  keys.py  linter.py  llm.py  models.py  report.py  sqlast.py
src/sqlquality/adapters/: __init__.py  base.py  postgres.py  redshift.py
tests/: test_adapters_postgres.py  test_adapters_redshift.py  test_antipatterns.py  test_changeset.py  test_check.py  test_check_gate.py  test_cli.py  test_complexity.py  test_config.py  test_dbtproject.py  test_delta.py  test_dialects.py  test_gate.py  test_keys.py  test_lint_cli.py  test_linter.py  test_llm.py  test_llm_anthropic.py  test_models.py  test_perf_cli.py  test_perf_suggest.py  test_precommit_hooks.py  test_report.py  test_report_markdown.py  test_sqlast.py
tests/fixtures/: manifest_v12.json
