[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlquality"
description = "Measure dbt model performance and complexity, and gate changes on the delta."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Hans Lemm"}]
keywords = ["dbt", "sql", "lint", "complexity", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
]
dynamic = ["version"]
dependencies = [
    "sqlglot>=30.12,<31",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "sqlfluff>=4,<5",
]

[project.urls]
Homepage = "https://github.com/hanslemm/sqlquality"
Issues = "https://github.com/hanslemm/sqlquality/issues"

[project.scripts]
sqlquality = "sqlquality.cli:main"

[project.optional-dependencies]
llm = ["anthropic>=0.40"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
]

[tool.hatch.version]
path = "src/sqlquality/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlquality"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src",
    "tests",
    "README.md",
    "LICENSE",
    ".pre-commit-hooks.yaml",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["sqlfluff.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anthropic.*"]
ignore_missing_imports = true
